# ChessVision

./: CMakeLists.txt  README.md  test_model.py
LiveChess2FEN_IMPL/: ChessVision.py  test.py
LiveChess2FEN_IMPL/cpmodels/: common.py  convert_onnx.py  convert_onnx_v2.py  convert_test.py  convert_test_2.py  convert_trt.py  convert_trt_v2.py  dataset.py  test.py  testFiles.py  train_ConvNeXtTiny.py  train_Inception.py  train_Xception.py  train_efficientnet_b7.py  train_resnet152_v2.py  train_yolov11.py  train_yolov5.py
LiveChess2FEN_IMPL/lc2fen/: infer_pieces.py  predict_board.py
LiveChess2FEN_IMPL/lc2fen/detectboard/: detect_board.py  image_object.py  laps.py  poly_point_isect.py
scripts/: create_dataset.py  dedup.py  pgn2fen.py  realsense.py  server.py  split_board.py  test.py
shaders/: fragment.glsl  vertex.glsl
src/: cuda_kernel.cu  cuda_kernel.h  main.cpp  main.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
